fixes bug 190000 "crashes [@ PR_SetPollableEvent]" r=pavlov sr=bz a=dbaron